// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Result /> renders conventionnal indemnite with warning toast 1`] = `
.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7598d6;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c16 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  color: #3e486e;
  text-align: left;
}

.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

.c1 {
  color: #3e486e;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: nowrap;
}

.c8 {
  margin-bottom: 1.6rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c13 {
  width: calc(50% * 1);
  background-color: #7598d6;
  border-radius: 0.6rem;
}

.c5 {
  width: calc(50% * 0.9100320789890648);
  background-color: #7598d6;
  border-radius: 0.6rem;
}

.c6 {
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.8rem;
}

.c7 {
  margin-top: 2rem;
}

.c9 {
  font-weight: bold;
  font-size: 1.4rem;
}

.c10 {
  list-style-type: disc;
}

.c11 {
  font-size: 1.4rem;
}

.c12 {
  margin: 1.6rem 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin: 0.4rem;
  font-weight: 700;
  font-size: 1.6rem;
}

.c15 {
  margin: 2rem 0;
}

@media (max-width:980px) {
  .c4 {
    -webkit-flex-flow: wrap;
    -ms-flex-flow: wrap;
    flex-flow: wrap;
  }
}

@media (max-width:980px) {
  .c13 {
    width: calc(100% * 1);
  }
}

@media (max-width:980px) {
  .c5 {
    width: calc(100% * 0.9100320789890648);
  }
}

@media (max-width:980px) {
  .c6 {
    width: 100%;
    margin-left: 0;
  }
}

<div>
  <h2
    class="c0"
  >
    Indemnité de licenciement
  </h2>
  <p>
    À partir des éléments que vous avez saisis, l’indemnité de licenciement est estimée à
     
    <strong
      class="c1"
    >
      17,444.44
       € brut
    </strong>
  </p>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <p>
    Il s’agit du montant le plus important entre l’indemnité légale et l’indemnité conventionnelle.
  </p>
  <div
    class="c2"
  >
    <div>
      <div
        class="c3"
      >
        Votre indemnite légale
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        />
        <span
          class="c6"
        >
          15,875.00
           € brut
        </span>
      </div>
      <details
        class="c7"
      >
        <summary
          class="c8"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c9"
        >
          Élements saisis :
        </strong>
        <ul
          class="c10"
        >
          <li
            class="c11"
          >
            Salaire de réference (Sref)
             : 
            4500
          </li>
          <li
            class="c11"
          >
            Licenciement pour inaptitude
             : 
            non
          </li>
          <li
            class="c11"
          >
            Ancienneté totale (A)
             : 
            13.08
          </li>
          <li
            class="c11"
          >
            Ancienneté au delà de 10ans (A2)
             : 
            3.08
          </li>
        </ul>
        <strong
          class="c9"
        >
          Formule
        </strong>
        <div
          class="c12"
        >
          <div
            id="react-mathjax-preview"
          >
            <div
              id="react-mathjax-preview-result"
            >
              \`(1/4 * Sref * 10) + (1/3 * Sref * "A2")\`
            </div>
          </div>
        </div>
      </details>
    </div>
    <div>
      <div
        class="c3"
      >
        Votre indemnite conventionnelle
      </div>
      <div
        class="c4"
      >
        <div
          class="c13"
        />
        <span
          class="c6"
        >
          17,444.44
           € brut
        </span>
      </div>
      <details
        class="c7"
      >
        <summary
          class="c8"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c9"
        >
          Élements saisis :
        </strong>
        <ul
          class="c10"
        >
          <li
            class="c11"
          >
            Salaire de référence (Sref)
             : 
            4000
          </li>
          <li
            class="c11"
          >
            Coefficient d'indemnité conventionnel (C)
             : 
            0.33
          </li>
          <li
            class="c11"
          >
            Ancienneté conventionnelle (A)
             : 
            13.08
          </li>
        </ul>
        <strong
          class="c9"
        >
          Formule
        </strong>
        <div
          class="c12"
        >
          <div
            id="react-mathjax-preview"
          >
            <div
              id="react-mathjax-preview-result"
            >
              \`(C * Sref * A)\`
            </div>
          </div>
        </div>
      </details>
    </div>
  </div>
  <div
    class="c14 c15"
  >
    <div
      class="c16"
      role="alert"
    >
      Si un emploi équivalent a été trouvé
      <ul>
        <li>
          par l’employeur
        </li>
        <li>
          dans une autre entreprise
        </li>
        <li>
          avant la fin du préavis
        </li>
        <li>
          et que le salarié l’accepte
        </li>
      </ul>
      Alors l’indemnité de licenciement conventionnelle est réduite d’un tiers et passe donc à
       
      <strong
        class="c1"
      >
        11629.62
         €
      </strong>
      <br />
      Attention, ce tiers (
      5814.81
       €) est dû si la période d’essai dans ce nouvel emploi reste sans suite.
    </div>
  </div>
  <p>
    Un accord d’entreprise, le contrat de travail ou un usage peuvent prévoir un montant plus favorable pour le salarié. Dans ce cas, le montant dû est le montant le plus favorable pour le salarié.
  </p>
</div>
`;

exports[`<Result /> renders legal indemnite 1`] = `
.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

.c1 {
  color: #3e486e;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: nowrap;
}

.c8 {
  margin-bottom: 1.6rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c5 {
  width: calc(50% * 1);
  background-color: #7598d6;
  border-radius: 0.6rem;
}

.c13 {
  width: calc(50% * 0.5494311811023621);
  background-color: #7598d6;
  border-radius: 0.6rem;
}

.c6 {
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.8rem;
}

.c7 {
  margin-top: 2rem;
}

.c9 {
  font-weight: bold;
  font-size: 1.4rem;
}

.c10 {
  list-style-type: disc;
}

.c11 {
  font-size: 1.4rem;
}

.c12 {
  margin: 1.6rem 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin: 0.4rem;
  font-weight: 700;
  font-size: 1.6rem;
}

@media (max-width:980px) {
  .c4 {
    -webkit-flex-flow: wrap;
    -ms-flex-flow: wrap;
    flex-flow: wrap;
  }
}

@media (max-width:980px) {
  .c5 {
    width: calc(100% * 1);
  }
}

@media (max-width:980px) {
  .c13 {
    width: calc(100% * 0.5494311811023621);
  }
}

@media (max-width:980px) {
  .c6 {
    width: 100%;
    margin-left: 0;
  }
}

<div>
  <h2
    class="c0"
  >
    Indemnité de licenciement
  </h2>
  <p>
    À partir des éléments que vous avez saisis, l’indemnité de licenciement est estimée à
     
    <strong
      class="c1"
    >
      15,875.00
       € brut
    </strong>
  </p>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <p>
    Il s’agit du montant le plus important entre l’indemnité légale et l’indemnité conventionnelle.
  </p>
  <div
    class="c2"
  >
    <div>
      <div
        class="c3"
      >
        Votre indemnite légale
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        />
        <span
          class="c6"
        >
          15,875.00
           € brut
        </span>
      </div>
      <details
        class="c7"
      >
        <summary
          class="c8"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c9"
        >
          Élements saisis :
        </strong>
        <ul
          class="c10"
        >
          <li
            class="c11"
          >
            Salaire de réference (Sref)
             : 
            4500
          </li>
          <li
            class="c11"
          >
            Licenciement pour inaptitude
             : 
            non
          </li>
          <li
            class="c11"
          >
            Ancienneté totale (A)
             : 
            13.08
          </li>
          <li
            class="c11"
          >
            Ancienneté au delà de 10ans (A2)
             : 
            3.08
          </li>
        </ul>
        <strong
          class="c9"
        >
          Formule
        </strong>
        <div
          class="c12"
        >
          <div
            id="react-mathjax-preview"
          >
            <div
              id="react-mathjax-preview-result"
            >
              \`(1/4 * Sref * 10) + (1/3 * Sref * "A2")\`
            </div>
          </div>
        </div>
      </details>
    </div>
    <div>
      <div
        class="c3"
      >
        Votre indemnite conventionnelle
      </div>
      <div
        class="c4"
      >
        <div
          class="c13"
        />
        <span
          class="c6"
        >
          8,722.22
           € brut
        </span>
      </div>
      <details
        class="c7"
      >
        <summary
          class="c8"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c9"
        >
          Élements saisis :
        </strong>
        <ul
          class="c10"
        >
          <li
            class="c11"
          >
            Salaire de référence (Sref)
             : 
            2000
          </li>
          <li
            class="c11"
          >
            Coefficient d'indemnité conventionnel (C)
             : 
            0.33
          </li>
          <li
            class="c11"
          >
            Ancienneté conventionnelle (A)
             : 
            13.08
          </li>
        </ul>
        <strong
          class="c9"
        >
          Formule
        </strong>
        <div
          class="c12"
        >
          <div
            id="react-mathjax-preview"
          >
            <div
              id="react-mathjax-preview-result"
            >
              \`(C * Sref * A)\`
            </div>
          </div>
        </div>
      </details>
    </div>
  </div>
  <p>
    Un accord d’entreprise, le contrat de travail ou un usage peuvent prévoir un montant plus favorable pour le salarié. Dans ce cas, le montant dû est le montant le plus favorable pour le salarié.
  </p>
</div>
`;
